k8s/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
  namespace: trial
  labels:
    app: php
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php-container
          image: 019496914213.dkr.ecr.eu-north-1.amazonaws.com/trial/php:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: trial
spec:
  type: LoadBalancer
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
