k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trial-ingress
  namespace: trial
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/subnets: subnet-0a4e7b649fb3f124a, subnet-0de5743b37af6d6ea, subnet-05c45f3b8af3e697e
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: golang-service
                port:
                  number: 80
          - path: /api/v2/
            pathType: Prefix
            backend:
              service:
                name: php-service
                port:
                  number: 80
